# ggez

./: .gitignore  BadPlate.gd  DefaultTheme.tres  GameManager.gd  GoodPlate.gd  Pipes.gltf.import  README.md  default_bus_layout.tres  default_env.tres  export_presets.cfg  optimize_assets.sh  project.godot  strona.html  titlescreen.png.import
.import/: Pipes.gltf-47b0249e0df9b93294310b19b35c8266.md5  Pipes.gltf-47b0249e0df9b93294310b19b35c8266.scn  Pipes.gltf-cd507e187163bfed5ade9a73c00409e2.md5  Pipes.gltf-cd507e187163bfed5ade9a73c00409e2.scn  Pipes2.gltf-ff4c040d66aeb01a5df7139216ee0926.md5  Pipes2.gltf-ff4c040d66aeb01a5df7139216ee0926.scn  RUBBISH.glb-8a77a34d7cf2bdf7d9f66b4b63923ca2.md5  RUBBISH.glb-8a77a34d7cf2bdf7d9f66b4b63923ca2.scn  RUBBISH.gltf-48c6a29dcb14783f9b04f5786eeea0db.md5  RUBBISH.gltf-48c6a29dcb14783f9b04f5786eeea0db.scn  TrashCan.gltf-39c022113442007f66c244bed5271d3d.md5  TrashCan.gltf-39c022113442007f66c244bed5271d3d.scn  TrashCan2.gltf-5f2424fcecf920c7e623b45574bdee89.md5  TrashCan2.gltf-5f2424fcecf920c7e623b45574bdee89.scn  TrashCan2Klapa.gltf-4e58be771188a6de3645a0e62aad2ec4.md5  TrashCan2Klapa.gltf-4e58be771188a6de3645a0e62aad2ec4.scn  TrashCan3.gltf-42b406b33ac0c0a2b4d19b5399a55967.md5  TrashCan3.gltf-42b406b33ac0c0a2b4d19b5399a55967.scn  bag.gltf-1f4d43b40e0d8ae1f976e90b2a3f41b7.md5  bag.gltf-1f4d43b40e0d8ae1f976e90b2a3f41b7.scn  bottle.gltf-73663249cd0b0770fdc1fef514f0c4ac.md5  bottle.gltf-73663249cd0b0770fdc1fef514f0c4ac.scn  cup.glb-edb89d83943a0f8dc715e9c22f94efd9.md5  (+49 more)
Tools/smolinator/: Cargo.toml  README.md
Tools/smolinator/src/: main.rs
(+530 files in other folders)
